stop hardcoded subjects